--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,11 +1,28 @@
-/* TICKER FEATURE */
 
+/*logo and pulblic nav bar styling*/
+#logoText{
+  font-family: 'Bangers', cursive;
+  font-size: 40px;
+  color: white;
+  margin-left: 5%;
+  margin-top: 0%;
+}
+
+#logoCoin{
+  height: 50px;
+  width: 50px;
+}
+#Dashboard{
+  background-color: rgb(63, 109, 86);
+  border-color: rgb(63, 109, 86);
+}
 marquee {
   width: 100%;
   margin: 0;
   padding: 0;
   
 }
+/* TICKER FEATURE */
 
 .tile-content, #newsfeed{
   background-color: white
