added global data

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -253,11 +253,11 @@ hr {
   color: whitesmoke;
 }
 
-/* li {
+li {
   display: inline;
   margin: 20px;
   font-weight: bold;
-} */
+}
 
 /* footer */
 #team {
